browser/themes/gnomestripe/browser/browser.css
/* ... */
toolbar[iconsize="small"] #paste-button {
  list-style-image: url("moz-icon://stock/gtk-paste?size=menu");
}
toolbar[iconsize="small"] #paste-button[disabled="true"] {
  list-style-image: url("moz-icon://stock/gtk-paste?size=menu&state=disabled");
}


#window-controls {
  -moz-box-align: start;
  padding: 0;
  border-left: 2px solid;
  -moz-border-left-colors: ThreeDHighlight ThreeDShadow;
}

#minimize-button {
  list-style-image: url("chrome://global/skin/icons/Minimize.gif");
}
#restore-button {
  list-style-image: url("chrome://global/skin/icons/Restore.gif");
}
#close-button {
  list-style-image: url("chrome://global/skin/icons/Close.gif");
}


#urlbar {
  width: 7em;
  min-width: 7em;
}

#urlbar-container {
  -moz-box-orient: horizontal;
  -moz-box-align: stretch;
}

#urlbar-icons {
  height: 18px;
  -moz-box-align: center;
  -moz-padding-end: 2px;
}

#urlbar[pageproxystate="invalid"] > #urlbar-icons > :not(#go-button) ,
#urlbar[pageproxystate="valid"] > #urlbar-icons > #go-button {
  visibility: collapse;
}

#urlbar-search-splitter {
  -moz-appearance: none;
  width: 8px;
  -moz-margin-start: -4px;
}



#search-container + #urlbar-container > #urlbar ,
#urlbar-container + #search-container > #searchbar > .searchbar-textbox ,
#urlbar-search-splitter + #urlbar-container > #urlbar ,
#urlbar-search-splitter + #search-container > #searchbar > .searchbar-textbox {
  -moz-margin-start: 0;
}

#wrapper-urlbar-container #urlbar {
  -moz-user-input: disabled;
  cursor: -moz-grab;
}

#wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
  display: none;
}

#PopupAutoComplete {
  direction: ltr !important;
}

#PopupAutoCompleteRichResult {
  direction: ltr !important;
}

#PopupAutoComplete[chromedir="rtl"] > tree > treerows {
  direction: rtl;
}

#PopupAutoComplete .autocomplete-treebody {
  direction: ltr;
}


#page-proxy-deck,
#page-proxy-favicon,
#page-proxy-button {
  width: 16px;
  height: 16px;
}

#page-proxy-deck {
  margin: 2px 3px;
}

#page-proxy-favicon {
  list-style-image: none;
}

#page-proxy-button {
  list-style-image: url("chrome://global/skin/icons/folder-item.png") !important;
  -moz-image-region: rect(0px, 16px, 16px, 0px);}

#page-proxy-button[pageproxystate="invalid"] {
  cursor: default;
  -moz-image-region: rect(32px, 16px, 48px, 0px) !important;
}


#identity-box {
  background-color: -moz-dialog;
  -moz-border-end: 1px solid ThreeDShadow;
}

#identity-box:focus {
  outline: 1px dotted -moz-DialogText;
}

#identity-icon-label {
  padding: 0 2px;
  margin: 0;
}

#identity-box.verifiedIdentity > hbox {
  background-color: rgba(0, 255, 0, 0.25);
}


#identity-popup-icon {
  height: 64px;
  width: 64px;
  padding: 0;
  list-style-image: url("chrome://browser/skin/identity.png");
  -moz-image-region: rect(0px, 64px, 64px, 0px);
}

.verifiedDomain > #identity-popup-container > #identity-popup-icon {
  -moz-image-region: rect(64px, 64px, 128px, 0px);
}

.verifiedIdentity > #identity-popup-container > #identity-popup-icon {
  -moz-image-region: rect(128px, 64px, 192px, 0px);
}


.unknownIdentity > #identity-popup-connectedToLabel,
.unknownIdentity > #identity-popup-runByLabel,
.unknownIdentity > #identity-popup-content-host,
.unknownIdentity > #identity-popup-content-owner {
    display: none;
}

.verifiedIdentity > #identity-popup-connectedToLabel2,
.verifiedDomain > #identity-popup-connectedToLabel2 {
    display: none;
}

#identity-popup-content-box > description,
#identity-popup-encryption-label {
  white-space: -moz-pre-wrap;
  color: black;
  padding-left: 15px;
  margin: 2px 0 4px;
}

#identity-popup-content-box > label {
  white-space: -moz-pre-wrap;
  padding-left: 15px;
  margin: 0;
}

#identity-popup-content-host {
   font-weight: bold;
   max-width: 300px;
}

#identity-popup-content-owner {
   font-weight: bold;
   max-width: 300px;
   margin-bottom: 0 !important;
}

.verifiedIdentity > #identity-popup-content-owner,
.verifiedIdentity > #identity-popup-content-host,
.verifiedDomain > #identity-popup-content-host {
   font-size: 140%;
}

#identity-popup-content-verifier {
  margin: 4px 0 2px;
}

.verifiedIdentity > #identity-popup-encryption,
.verifiedDomain > #identity-popup-encryption {
  margin-top: 10px;
  margin-left: -18px;
}

.verifiedIdentity > #identity-popup-encryption > * > #identity-popup-encryption-icon,
.verifiedDomain > #identity-popup-encryption > * > #identity-popup-encryption-icon {
  list-style-image: url("chrome://browser/skin/Secure.png");
}


#identity-popup-container {
  background-image: none;
  background-color: white;
  min-width: 280px;
  padding: 10px;
}


#urlbar[level="high"][pageproxystate="valid"] > .autocomplete-textbox-container,
#urlbar[level="low"][pageproxystate="valid"] > .autocomplete-textbox-container,
#urlbar[level="high"][pageproxystate="valid"] #autocomplete-security-wrapper,
#urlbar[level="low"][pageproxystate="valid"] #autocomplete-security-wrapper,
#urlbar[level="broken"][pageproxystate="valid"] #autocomplete-security-wrapper {
  background-color: #F5F6BE; 
  color: #000000;
}

#urlbar > .autocomplete-textbox-container {
  -moz-binding: url(chrome://browser/skin/browser.xml#autocomplete-security-wrapper);
}


#autocomplete-security-wrapper {
  direction: ltr;
  -moz-box-align: center;
}


#feed-button,
#feed-button > .button-box,
#feed-button:hover:active > .button-box {
  padding: 0px;
  margin: 0px;
  border: 0px; 
  background-color: transparent;
}

#feed-button > hbox > .button-menu-dropmarker,
#feed-button > hbox > .button-text {
  display: none;
}

#feed-button {
  -moz-binding: url("chrome://global/content/bindings/button.xml#menu");
  -moz-appearance: none; 
  min-width: 0px; 
  margin-right: 1px !important;
}

#feed-button[feeds] {
  list-style-image: url("chrome://browser/skin/feeds/feedIcon16.png");
}


#urlbar .autocomplete-textbox-container {
  -moz-box-align: stretch;
}

#treecolAutoCompleteImage {
  max-width : 36px; 
}
/* ... */

